--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>task1</module>
+        <module>task2</module>
+        <module>task3</module>
+        <module>task4</module>
+        <module>task6</module>
+        <module>task7</module>
+        <module>libs</module>
     </modules>
 
 
